--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
 <form>
-  <input type="text" name="search" placeholder="Search..">
+  <input id="main-search" type="text" name="search" placeholder="Search..">
 </form>
 
