--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,6 @@
-<%= link_to 'Add Book', new_book_path %><br>
+<%= button_to "Add Book", new_book_path, :id => "open-contacts-dialog-btn",
+      :class => "inbox-sf-add-btn tip", :method => :get %>
+<br>
 <table>
   <tr>
     <th>Name</th>
