--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
     <td><%= book.author_id %></td>
     <td>
       <%= link_to "edit", edit_book_path(book) %>
-      <%= link_to "Delete", book_path(book), :method => :delete %>
+      <%= link_to "Delete", book_path(book), :method => :delete, data: { confirm: 'Are you sure you want to delete this alert?' } %>
     </td>
   </tr>
   <% end %>
