--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,7 @@
   </tr>
   <% @books.each do |book| %>
   <tr>
-    <td><%= image_tag @book.image_url%></td>
+    <td><%= image_tag book.picture_url, size: "25" %></td>
     <td><%= book.name %></td>
     <td><%= book.publish_date %></td>
     <td><%= book.author_id %></td>
