--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @author do |f| %>
+<%= form_for @author, html: { multipart: true } do |f| %>
   <%= f.label :name %>:
   <%= f.text_field :name %><br/>
     <%= f.label :avatar %>:
