--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -1,5 +1,7 @@
-<%= form_for @author do |f| %>
+<%= form_for @author, html: { multipart: true } do |f| %>
   <%= f.label :name %>:
   <%= f.text_field :name %><br/>
+    <%= f.label :avatar %>:
+  <%= f.file_field :avatar %>
   <%= f.submit %>
 <% end %>
