--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @book do |f| %>
+<%= form_for @book, html: { multipart: true } do |f| %>
   <%= f.label :name %>:
   <%= f.text_field :name %><br />
 
@@ -7,6 +7,9 @@
 
   <%= f.label :author %>:
   <%= f.collection_select :author_id, Author.all, :id, :name %><br />
+
+  <%= f.label :picture %>:
+  <%= f.file_field :picture %>
 
   <%= f.submit %>
 
