--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -11,6 +11,12 @@
   <%= f.label :picture %>:
   <%= f.file_field :picture %>
 
+  <%= f.label :description %>:
+  <%= f.text_field :description %><br />
+
+  <%= f.label :inventory %>:
+  <%= f.number_field :inventory %><br />
+
   <%= f.submit %>
 
 <% end %>
