--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -9,13 +9,16 @@
   <%= f.collection_select :author_id, Author.all, :id, :name %><br />
 
   <%= f.label :picture %>:
-  <%= f.file_field :picture %>
+  <%= f.file_field :picture %><br />
 
   <%= f.label :description %>:
-  <%= f.text_field :description %><br />
+  <%= f.text_area :description %><br />
 
   <%= f.label :inventory %>:
   <%= f.number_field :inventory %><br />
+
+  <%= f.label :price %>:
+  <%= f.text_field :price %><br />
 
   <%= f.submit %>
 
