added the subtotal column to email

--- a/app/views/order_mailer/send_receipt.html.erb
+++ b/app/views/order_mailer/send_receipt.html.erb
@@ -12,13 +12,23 @@
         <tr>
           <th>Quantity</th>
           <th>Book Name</th>
+          <th>Unit Price</th>          
+          <th>Total Price</th>
         </tr>
         <% @order_items.each do |order_item| %>  
         <tr>
           <td><%= order_item.quantity %></td>
           <td><%= order_item.book.name %></td>
+          <td><%= number_to_currency(order_item.unit_price) %></td> 
+          <td><%= number_to_currency(order_item.total_price) %></td>                             
         </tr>
         <% end %>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td><%= number_to_currency(@order.subtotal) %></td>
+        </tr>
       </table>
     <p>Thanks for joining and have a great day!</p>
   </body>
