--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <p>Book Store</p>
+ <p><%= link_to 'Book Store', root_path %></p>
 <head>
   <title>BookStore</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
