--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
- <p><%= link_to 'Book Store', root_path %></p>
 <head>
   <title>BookStore</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+ <%= render "layouts/header" %>
 </head>
 <body>
 
