formatting html code for footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,85 +1,76 @@
 <div class="FooterContainer">
-<div class="Footer-bg"></div>
-<div class="Footer Content">
-<div class="Footer-links">
-<div class="Footer-linksSection">
-<div class="Footer-linksHalf">
-<h3>Popular Categories</h3>
-<ul>
-<li><a href="b/childrens-books/index.html">Children's</a> </li>
-</ul>
-</div>
-<div class="Footer-linksHalf">
-<h3>Website</h3>
-<ul>
-<li><a href="testimonials.aspx.html">Testimonials</a> </li>
-</ul>
-</div>
-</div>
-<div class="Footer-linksSection">
-<div class="Footer-linksHalf">
-<h3>Information</h3>
-<ul>
-<li><a href="shippingcosts.aspx.html">Shipping Costs</a> </li>
-</ul>
-<h3>Partnerships</h3>
-<ul>
-<li><a href="wholesalebooks.aspx.html">Buy From Us Wholesale</a> </li>
-</ul>
-</div>
-<div class="Footer-linksHalf">
-<h3>Quick Help</h3>
-<ul>
-<li><a href="help/index.html">Help &amp; Support</a> </li>
-</ul>
-</div>
-</div>
-<div style="font-size:.78rem; margin:10px;">
-<b>ThriftBooks</b> sells millions of used books at the lowest everyday prices. We personally assess every book's quality and offer rare, out-of-print treasures. We deliver the joy of reading in 100% recycled packaging with free standard shipping on U.S. orders over $10. Thriftbooks.com – Read More. Save More.
-</div>
-</div>
-<div class="Footer-sidebar">
-<div class="Footer-sidebarContent">
-<h3>Special Offers</h3>
-<p>Sign up today to receive exclusive offers, special deals and coupons.</p>
-<div id="EmailForm"></div> <a class="Footer-privacy" href="privacypolicy.aspx.html">We respect your privacy</a>
-<h3>Follow Us</h3>
-<div class="Footer-socials">
-<a target="_blank" href="https://facebook.com/thriftbooks" title="Like us on Facebook">
-<svg class="Icon">
-<use xlink:href="#Icon--social-fb-f"></use>
-</svg>
-</a>
-<a target="_blank" href="https://twitter.com/thriftbooks/" title="Follow us on Twitter">
-<svg class="Icon">
-<use xlink:href="#Icon--social-twitter"></use>
-</svg>
-</a>
-<a target="_blank" href="http://pinterest.com/thriftbooks/" title="Follow us on Pinterest">
-<svg class="Icon">
-<use xlink:href="#Icon--social-pinterest"></use>
-</svg>
-</a>
-<a target="_blank" href="http://thrift-books.tumblr.com/" title="Follow us on Tumblr">
-<svg class="Icon">
-<use xlink:href="#Icon--social-tumblr"></use>
-</svg>
-</a>
-<a target="_blank" href="https://instagram.com/thriftbooks/" title="Follow us on Instagram">
-<svg class="Icon">
-<use xlink:href="#Icon--social-instagram"></use>
-</svg>
-</a>
-</div>
-<a href="giftcard.aspx.html" class="Footer-giftCard"><img src="images/gift-card.jpg"> </a>
-</div>
-</div>
-</div>
-<div class="Colophon Content">
-<div class="Colophon-content"> Copyright &copy; 2016 Thriftbooks.com <a href="conditionofuse.aspx.html">Terms of Use</a> | <a href="privacypolicy.aspx.html">Privacy Policy</a>
-<a href="sitesecurity.aspx.html" class="Footer-goDaddy"> <img src="images/goDaddy.gif" alt="GoDaddy Verified and Secured"> </a>
-<div id="gtsIcon" class="GoogleTrustedStore"></div>
-</div>
-</div>
+   <div class="Footer-bg"></div>
+   <div class="Footer Content">
+      <div class="Footer-links">
+         <div class="Footer-linksSection">
+            <div class="Footer-linksHalf">
+               <h3>Popular Categories</h3>
+               <ul>
+                  <li><a href="b/childrens-books/index.html">Children's</a> </li>
+               </ul>
+            </div>
+            <div class="Footer-linksHalf">
+               <h3>Website</h3>
+               <ul>
+                  <li><a href="testimonials.aspx.html">Testimonials</a> </li>
+               </ul>
+            </div>
+         </div>
+         <div class="Footer-linksSection">
+            <div class="Footer-linksHalf">
+               <h3>Information</h3>
+               <ul>
+                  <li><a href="shippingcosts.aspx.html">Shipping Costs</a> </li>
+               </ul>
+               <h3>Partnerships</h3>
+               <ul>
+                  <li><a href="wholesalebooks.aspx.html">Buy From Us Wholesale</a> </li>
+               </ul>
+            </div>
+            <div class="Footer-linksHalf">
+               <h3>Quick Help</h3>
+               <ul>
+                  <li><a href="help/index.html">Help &amp; Support</a> </li>
+               </ul>
+            </div>
+         </div>
+         <div style="font-size:.78rem; margin:10px;">
+            <b>ThriftBooks</b> sells millions of used books at the lowest everyday prices. We personally assess every book's quality and offer rare, out-of-print treasures. We deliver the joy of reading in 100% recycled packaging with free standard shipping on U.S. orders over $10. Thriftbooks.com – Read More. Save More.
+         </div>
+      </div>
+      <div class="Footer-sidebar">
+         <div class="Footer-sidebarContent">
+            <h3>Special Offers</h3>
+            <p>Sign up today to receive exclusive offers, special deals and coupons.</p>
+            <div id="EmailForm"></div>
+            <a class="Footer-privacy" href="#">We respect your privacy</a>
+            <h3>Follow Us</h3>
+            <div class="Footer-socials">
+               <a target="_blank" href="#" title="Like us on Facebook">
+               </a>
+               <a target="_blank" href="#" title="Follow us on Twitter">
+              
+               </a>
+               <a target="_blank" href="#" title="Follow us on Pinterest">
+                
+               </a>
+               <a target="_blank" href="#" title="Follow us on Tumblr">
+               
+               </a>
+               <a target="_blank" href="#" title="Follow us on Instagram">
+               
+               </a>
+            </div>
+            <a href="giftcard.aspx.html" class="Footer-giftCard"><img src="#"> </a>
+         </div>
+      </div>
+   </div>
+   <div class="Colophon Content">
+      <div class="Colophon-content">
+         Copyright &copy; 2016 Thriftbooks.com <a href="conditionofuse.aspx.html">Terms of Use</a> | <a href="privacypolicy.aspx.html">Privacy Policy</a>
+         <a href="sitesecurity.aspx.html" class="Footer-goDaddy"> <img src="images/goDaddy.gif" alt="GoDaddy Verified and Secured"> </a>
+         <div id="gtsIcon" class="GoogleTrustedStore"></div>
+      </div>
+   </div>
 </div>
 </div>
