--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,13 +6,13 @@
             <div class="Footer-linksHalf">
                <h3>Popular Categories</h3>
                <ul>
-                  <li><a href="b/childrens-books/index.html">Children's</a> </li>
+                  <li><a href="#">Children's</a> </li>
                </ul>
             </div>
             <div class="Footer-linksHalf">
                <h3>Website</h3>
                <ul>
-                  <li><a href="testimonials.aspx.html">Testimonials</a> </li>
+                  <li><a href="#">Testimonials</a> </li>
                </ul>
             </div>
          </div>
@@ -20,17 +20,17 @@
             <div class="Footer-linksHalf">
                <h3>Information</h3>
                <ul>
-                  <li><a href="shippingcosts.aspx.html">Shipping Costs</a> </li>
+                  <li><a href="#">Shipping Costs</a> </li>
                </ul>
                <h3>Partnerships</h3>
                <ul>
-                  <li><a href="wholesalebooks.aspx.html">Buy From Us Wholesale</a> </li>
+                  <li><a href="#">Buy From Us Wholesale</a> </li>
                </ul>
             </div>
             <div class="Footer-linksHalf">
                <h3>Quick Help</h3>
                <ul>
-                  <li><a href="help/index.html">Help &amp; Support</a> </li>
+                  <li><a href="#">Help &amp; Support</a> </li>
                </ul>
             </div>
          </div>
@@ -67,8 +67,8 @@
    </div>
    <div class="Colophon Content">
       <div class="Colophon-content">
-         Copyright &copy; 2016 Thriftbooks.com <a href="conditionofuse.aspx.html">Terms of Use</a> | <a href="privacypolicy.aspx.html">Privacy Policy</a>
-         <a href="sitesecurity.aspx.html" class="Footer-goDaddy"> <img src="images/goDaddy.gif" alt="GoDaddy Verified and Secured"> </a>
+         Copyright &copy; 2016 Thriftbooks.com <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a>
+         <a href="#" class="Footer-goDaddy"> <img src="images/goDaddy.gif" alt="GoDaddy Verified and Secured"> </a>
          <div id="gtsIcon" class="GoogleTrustedStore"></div>
       </div>
    </div>
