--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,20 @@
 <div class="Header Content">
    <a class="Header-logoLink" href="index.html">
-    <%= link_to (image_tag("logo2.png", class: "Header-logo")), root_path %></a>
+   <%= link_to (image_tag("logo2.png", class: "Header-logo")), root_path %></a>
    <div class="SearchContainer SearchContainer--header" id="GlobalSearch">
-      <div class="Search">
-         <input class="Search-input" placeholder="Search Books by Title, Author, Keyword, or ISBN" type="text" value="">
-         <div class="Search-submit Button-container is-small is-flat" title="">Search</button></div>
+      <%= form_tag browse_path, method: 'get' do %>
+        <div class="Search">
+         <%= text_field_tag :search, params[:search], class: 'Search-input' %> 
+         <div class="Search-submit Button-container is-small is-flat">
+            <%= submit_tag "Search", class: "Button" %>
+         </div>
          <ul class="Search-results u-hidden"></ul>
       </div>
+      <% end %>
    </div>
+
    <a class="Header-button Header-wishlist" href="#">
-      <span class="Header-buttonText">Wish List</span>
+   <span class="Header-buttonText">Wish List</span>
    </a>
    <div id="GlobalCartContainer" class="Header-button Header-cart">
       <div class="GlobalCart-container">
@@ -34,6 +39,6 @@
       </div>
    </div>
    <a class="Header-menu" href="#" id="GlobalMenuButton">
-      <span class="Header-menuText">Menu</span>
+   <span class="Header-menuText">Menu</span>
    </a>
 </div>
