--- a/app/views/search/browse.html.erb
+++ b/app/views/search/browse.html.erb
@@ -91,5 +91,122 @@
          </div>
       </div>
    </div>
-</div>
-</div>
+<div class="BrowseContent-container" data-reactid=".7.0.1">
+   <div class="BrowseContent" data-reactid=".7.0.1.0">
+      <h4 class="SearchPage-title" data-reactid=".7.0.1.0.0:$searchPage-title">Search</h4>
+      <div class="BrowseSearchTerms" data-reactid=".7.0.1.0.0:$searchPage-searchTerms">
+         <div class="BrowseSearchTerm is-term" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term">
+            <div class="BrowseSearchTerm-term" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.0"><span data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.0.0"><strong data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.0.0.0">Search</strong><span data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.0.0.1">: </span><span data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.0.0.2">The Hunger Games</span></span></div>
+            <button class="BrowseSearchTerm-close is-link" title="" type="button" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.1">
+               <svg icon="close" class="Icon" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.1.0">
+                  <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--close" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$term.1.0.0"></use>
+               </svg>
+            </button>
+         </div>
+         <div class="BrowseSearchTerm is-filter" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40">
+            <div class="BrowseSearchTerm-term" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.0"><span data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.0.0"><strong data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.0.0.0">Language</strong><span data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.0.0.1">: </span><span data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.0.0.2">English</span></span></div>
+            <button class="BrowseSearchTerm-close is-link" title="" type="button" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.1">
+               <svg icon="close" class="Icon" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.1.0">
+                  <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--close" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$f-languages-40.1.0.0"></use>
+               </svg>
+            </button>
+         </div>
+         <div class="BrowseSearchTerm is-misc" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$outOfStock">
+            <div class="BrowseSearchTerm-term" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$outOfStock.0">Show Out Of Stock</div>
+            <button class="BrowseSearchTerm-close is-link" title="" type="button" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$outOfStock.1">
+               <svg icon="close" class="Icon" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$outOfStock.1.0">
+                  <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--close" data-reactid=".7.0.1.0.0:$searchPage-searchTerms.$outOfStock.1.0.0"></use>
+               </svg>
+            </button>
+         </div>
+      </div>
+      <h3 class="BrowseContent-title" data-reactid=".7.0.1.0.1"><span data-reactid=".7.0.1.0.1.0"><span data-reactid=".7.0.1.0.1.0.0">1</span><span data-reactid=".7.0.1.0.1.0.1">–</span><span data-reactid=".7.0.1.0.1.0.2">25 </span><span data-reactid=".7.0.1.0.1.0.3">of </span><strong data-reactid=".7.0.1.0.1.0.4">77</strong><span data-reactid=".7.0.1.0.1.0.5"> results found</span></span></h3>
+      <div class="BrowseSortBar" data-reactid=".7.0.1.0.2">
+         <button class="BrowseSortBar-header is-link" title="" type="button" data-reactid=".7.0.1.0.2.0">
+            <span data-reactid=".7.0.1.0.2.0.0">Sort</span>
+            <svg icon="chevron-up" class="Icon" data-reactid=".7.0.1.0.2.0.1">
+               <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--chevron-up" data-reactid=".7.0.1.0.2.0.1.0"></use>
+            </svg>
+         </button>
+         <div class="BrowseSortBar-content" data-reactid=".7.0.1.0.2.1">
+            <div class="BrowseSort" data-reactid=".7.0.1.0.2.1.0">
+               <div class="BrowseSort-label" data-reactid=".7.0.1.0.2.1.0.0">Sort by:</div>
+               <select class="is-small" data-reactid=".7.0.1.0.2.1.0.1">
+                  <option value="topMatches-desc" data-reactid=".7.0.1.0.2.1.0.1.$topMatches-desc">Relevance</option>
+                  <option selected="" value="bestsellers-desc" data-reactid=".7.0.1.0.2.1.0.1.$bestsellers-desc">Most Popular</option>
+                  <option value="title-asc" data-reactid=".7.0.1.0.2.1.0.1.$title-asc">Title (A to Z)</option>
+                  <option value="title-desc" data-reactid=".7.0.1.0.2.1.0.1.$title-desc">Title (Z to A)</option>
+                  <option value="publishDate-desc" data-reactid=".7.0.1.0.2.1.0.1.$publishDate-desc">Publish Date (New to Old)</option>
+                  <option value="publishDate-asc" data-reactid=".7.0.1.0.2.1.0.1.$publishDate-asc">Publish Date (Old to New)</option>
+               </select>
+            </div>
+            <div class="BrowseItemsPerPage" data-reactid=".7.0.1.0.2.1.1">
+               <label for="BrowseItemsPerPage" data-reactid=".7.0.1.0.2.1.1.0">Items per page:</label>
+               <select class="is-small" id="BrowseItemsPerPage" data-reactid=".7.0.1.0.2.1.1.1">
+                  <option value="5" data-reactid=".7.0.1.0.2.1.1.1.0">5</option>
+                  <option value="10" data-reactid=".7.0.1.0.2.1.1.1.1">10</option>
+                  <option selected="" value="25" data-reactid=".7.0.1.0.2.1.1.1.2">25</option>
+                  <option value="50" data-reactid=".7.0.1.0.2.1.1.1.3">50</option>
+               </select>
+            </div>
+            <div class="BrowseOutOfStock" data-reactid=".7.0.1.0.2.1.2">
+               <label class="Checkbox is-large" data-reactid=".7.0.1.0.2.1.2.0">
+                  <input checked="" type="checkbox" data-reactid=".7.0.1.0.2.1.2.0.0"><strong class="Checkbox-label" data-reactid=".7.0.1.0.2.1.2.0.1">Show Out of Stock Items</strong>
+                  <div class="Checkbox-state" data-reactid=".7.0.1.0.2.1.2.0.2"></div>
+               </label>
+            </div>
+            <div class="BrowseGridView" data-reactid=".7.0.1.0.2.1.3">
+               <button class="BrowseGridView-option is-link" title="List View" type="button" data-reactid=".7.0.1.0.2.1.3.0">
+                  <svg icon="list" class="Icon" data-reactid=".7.0.1.0.2.1.3.0.0">
+                     <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--list" data-reactid=".7.0.1.0.2.1.3.0.0.0"></use>
+                  </svg>
+                  <span class="BrowseGridView-label" data-reactid=".7.0.1.0.2.1.3.0.1">List View</span>
+               </button>
+               <button class="BrowseGridView-option is-active is-link" title="Grid View" type="button" data-reactid=".7.0.1.0.2.1.3.1">
+                  <svg icon="grid" class="Icon" data-reactid=".7.0.1.0.2.1.3.1.0">
+                     <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--grid" data-reactid=".7.0.1.0.2.1.3.1.0.0"></use>
+                  </svg>
+                  <span class="BrowseGridView-label" data-reactid=".7.0.1.0.2.1.3.1.1">Grid View</span>
+               </button>
+            </div>
+         </div>
+      </div>
+      <div data-reactid=".7.0.1.0.3">
+         <div class="BrowseList is-grid" data-reactid=".7.0.1.0.3.0">
+
+            <a class="BrowseEntry is-grid BookSlider-slide" href="/w/the-hunger-games-by-suzanne-collins/246187/#isbn=0439023521" data-reactid=".7.0.1.0.3.0.$5277544">
+               <div class="BookSlider-contentContainer" data-reactid=".7.0.1.0.3.0.$5277544.0">
+                  <div class="BookSlider-imageContainer" data-reactid=".7.0.1.0.3.0.$5277544.0.0">
+                     <div class="BookSlider-padding" data-reactid=".7.0.1.0.3.0.$5277544.0.0.0"></div>
+                     <img alt="The Hunger Games" class="BookSlider-image" src="http://ecx.images-amazon.com/images/I/41bOj-am1RL._SL230_.jpg" data-reactid=".7.0.1.0.3.0.$5277544.0.0.1">
+                  </div>
+                  <div class="BookSlider-content" data-reactid=".7.0.1.0.3.0.$5277544.0.1">
+                     <p class="BookSlider-title" data-reactid=".7.0.1.0.3.0.$5277544.0.1.0">The Hunger Games</p>
+                     <p class="BookSlider-author" data-reactid=".7.0.1.0.3.0.$5277544.0.1.1">Suzanne Collins</p>
+                     <span data-reactid=".7.0.1.0.3.0.$5277544.0.1.3"> </span>
+                     <p class="BookSlider-price" data-reactid=".7.0.1.0.3.0.$5277544.0.1.5"><span data-reactid=".7.0.1.0.3.0.$5277544.0.1.5.0"><span data-reactid=".7.0.1.0.3.0.$5277544.0.1.5.0.0">from: </span><strong data-reactid=".7.0.1.0.3.0.$5277544.0.1.5.0.1"><span data-reactid=".7.0.1.0.3.0.$5277544.0.1.5.0.1.0">$</span><span data-reactid=".7.0.1.0.3.0.$5277544.0.1.5.0.1.1">3.59</span></strong></span></p>
+                  </div>
+               </div>
+            </a>
+            
+         </div>
+         <span data-reactid=".7.0.1.0.3.1"></span>
+         <div class="Browse-paginationContainer" data-reactid=".7.0.1.0.3.2">
+            <button class="Browse-pagination is-left is-link is-disabled" disabled="" title="Previous page" type="button" data-reactid=".7.0.1.0.3.2.0">
+               <svg icon="chevron-left" class="Icon" data-reactid=".7.0.1.0.3.2.0.0">
+                  <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--chevron-left" data-reactid=".7.0.1.0.3.2.0.0.0"></use>
+               </svg>
+            </button>
+            <button class="Browse-pagination is-right is-link" title="Next page" type="button" data-reactid=".7.0.1.0.3.2.1">
+               <svg icon="chevron-right" class="Icon" data-reactid=".7.0.1.0.3.2.1.0">
+                  <use data-classes="" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Icon--chevron-right" data-reactid=".7.0.1.0.3.2.1.0.0"></use>
+               </svg>
+            </button>
+            <div class="Browse-paginationInput" data-reactid=".7.0.1.0.3.2.2">
+               <div class="Browse-paginationInput-content" data-reactid=".7.0.1.0.3.2.2.0"><input type="text" value="1" data-reactid=".7.0.1.0.3.2.2.0.0"><span data-reactid=".7.0.1.0.3.2.2.0.1"> of </span><strong data-reactid=".7.0.1.0.3.2.2.0.2">4</strong></div>
+               <div class="Browse-paginationInput-link u-hidden" data-reactid=".7.0.1.0.3.2.2.1"><button class="is-link" title="" type="button" data-reactid=".7.0.1.0.3.2.2.1.0">Go</button></div>
+            </div>
+         </div>
+      </div>
+   </div>
+</div></div></div>
