--- a/app/views/search/browse.html.erb
+++ b/app/views/search/browse.html.erb
@@ -120,7 +120,7 @@
             </button>
          </div>
       </div>
-      <h3 class="BrowseContent-title" data-reactid=".7.0.1.0.1"><span data-reactid=".7.0.1.0.1.0"><span data-reactid=".7.0.1.0.1.0.0">1</span><span data-reactid=".7.0.1.0.1.0.1">–</span><span data-reactid=".7.0.1.0.1.0.2">25 </span><span data-reactid=".7.0.1.0.1.0.3">of </span><strong data-reactid=".7.0.1.0.1.0.4">77</strong><span data-reactid=".7.0.1.0.1.0.5"> results found</span></span></h3>
+      <h3 class="BrowseContent-title" data-reactid=".7.0.1.0.1"><span data-reactid=".7.0.1.0.1.0"><span data-reactid=".7.0.1.0.1.0.0">1</span><span data-reactid=".7.0.1.0.1.0.1">–</span><span data-reactid=".7.0.1.0.1.0.2">25 </span><span data-reactid=".7.0.1.0.1.0.3">of </span><strong data-reactid=".7.0.1.0.1.0.4">77</strong><span data-reactid=".7.0.1.0.1.0.5"></span></span></h3>
       <div class="BrowseSortBar" data-reactid=".7.0.1.0.2">
          <button class="BrowseSortBar-header is-link" title="" type="button" data-reactid=".7.0.1.0.2.0">
             <span data-reactid=".7.0.1.0.2.0.0">Sort</span>
