displaying the sidebar

--- a/app/views/search/_browse_content.html.erb
+++ b/app/views/search/_browse_content.html.erb
@@ -3,7 +3,8 @@
       <h4 class="SearchPage-title" >Search</h4>
       <div class="BrowseSearchTerms" >
       </div>
-      <h3 class="BrowseContent-title" > results found</span></span></h3>
+      <h3 class="BrowseContent-title" ><%= page_entries_info @books %>
+      </span></span></h3>
       <div class="BrowseSortBar" >
          <button class="BrowseSortBar-header is-link" title="" type="button" >
             <span >Sort</span>
