message pop when click

--- a/app/views/search/_browse_content.html.erb
+++ b/app/views/search/_browse_content.html.erb
@@ -1,6 +1,7 @@
 <div class="BrowseContent-container" >
    <div class="BrowseContent" >
       <h4 class="SearchPage-title" >Search</h4>
+      <%= render 'search/search_filter'%>
       <div class="BrowseSearchTerms" >
       </div>
       <h3 class="BrowseContent-title" ><%= page_entries_info @books %>
