showing comments in details page

--- a/app/views/search/details.html.erb
+++ b/app/views/search/details.html.erb
@@ -104,6 +104,7 @@
                         <button class="WorkMeta-reviewsLink is-link" title="" type="button"></button>
                      </div>
                   </div>
+                  <% @book.comments.each do |comment| %>
                   <div class="MiniBrowse-seeAllLink is-desktop">
                      <button class="is-link" title="" type="button">
                         <span> Details </span>
@@ -113,6 +114,8 @@
                      </button>
                      <p><%= @book.description %></p>
                   </div>
+                    <p><%= @book.comments(comment) %></p>
+                  <% end %>
                   <div class="MiniBrowseContainer">
                      <div>
                         <div class="Loading-spinner">
